# GIS

./: README.md
doc/doc1/tex/: .gitignore  spr1.aux  spr1.bbl  spr1.bib  spr1.blg  spr1.dvi  spr1.out  spr1.tex  spr1.toc
src/: testowy2.txt
src/R/: num-exp.R
src/cpp/: .gitignore  CMakeLists.txt  graph.cpp  graph.h  main.cpp  vertex.cpp  vertex.h
src/cpp/generator/: CMakeLists.txt
src/cpp/generator/include/generator/: BAModel.h  Bucket.h  PreferentialAttachement.h  Random.h  RandomImp.hpp  RollNode.h  RollTree.h
src/cpp/generator/src/: BAModel.cc  Bucket.cc  RollTree.cpp
src/cpp/graph/: CMakeLists.txt
src/cpp/graph/include/graph/: Graph.h  GraphImpOur.h  Node.h  NodeImpOur.h
src/cpp/graph/src/: GraphImpOur.cpp  NodeImpOur.cpp
